force-app/main/default/objects/Account/fields/ERP_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Id__c</fullName>
    <externalId>true</externalId>
    <label>ERP Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>