force-app/main/default/objects/Account/fields/Q1_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q1_Forecast__c</fullName>
    <label>Q1 Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>