force-app/main/default/objects/Account/fields/Q2_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q2_Forecast__c</fullName>
    <label>Q2 Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>