force-app/main/default/objects/Account/fields/Q3_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Q3_Forecast__c</fullName>
    <label>Q3 Forecast</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>